<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/facebookPage"
            android:icon="@drawable/facebook"
            android:title="@string/facebook_page"/>
        <item
            android:id="@+id/InstagarmPage"
            android:icon="@drawable/instagram"
            android:title="@string/instagram"/>
        <item
            android:id="@+id/websitePage"
            android:icon="@drawable/webportal"
            android:title="@string/website_page"/>

    </group>
    <item android:title="@string/communication">
        <menu>
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_baseline_stars_24"
                android:title="@string/nav_rate"/>
               <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_baseline_screen_share_24"
                android:title="@string/nav_share"/>
            <item
                android:id="@+id/nav_privacy_policy"
                android:icon="@drawable/ic_baseline_security_24"
                android:title="@string/nav_privacy_policy"/>
            <item
                android:id="@+id/nav_terms_conditions"
                android:icon="@drawable/terms"
                android:title="@string/nav_terms_conditions"/>


        </menu>
    </item>
</menu>